Fixed issue with list headers wrapping text

--- a/src/components/ListEntry/index.module.scss
+++ b/src/components/ListEntry/index.module.scss
@@ -44,6 +44,8 @@
         height: 100%;
         justify-content: center;
 
+        flex-shrink: 1;
+
         box-sizing: border-box;
 
         padding: 10px 10px;
@@ -51,9 +53,7 @@
         color: black;
 
         &__header {
-            width: 100%;
-
-            & > a {
+            & > a, & > span {
                 display: block;
 
                 text-overflow: ellipsis;
