--- a/src/components/ListEntryHeader/index.module.scss
+++ b/src/components/ListEntryHeader/index.module.scss
@@ -1,10 +1,14 @@
 
 .header {
+    position: relative;
+
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+
     width: 100%;
+    overflow: hidden;
 
     & > div {
         display: flex;
@@ -12,11 +16,18 @@
         justify-content: start;
         align-items: center;
 
+        overflow: hidden;
+
         // Override some styles on the ListEntry
         & > div {
+            overflow: hidden;
+            flex-shrink: 1;
+
             border: none !important;
-            & > div > span {
-                height: 70%;
+            & > div {
+                & > span {
+                    height: 70%;
+                }
             }
         }
     }
@@ -25,7 +36,13 @@
         justify-content: center;
         align-items: center;
 
+        flex-shrink: 0 !important;
+
         margin: 0 15px 0 10px;
+
+        @media (max-width: 400px) {
+            margin: 0;
+        }
 
         & img {
             width: 40px;
@@ -40,6 +57,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        flex-shrink: 0;
 
         & img {
             width: 40px;
