--- a/src/pages/Food/index.module.scss
+++ b/src/pages/Food/index.module.scss
@@ -52,6 +52,11 @@
             border-bottom: 1px solid black;
         }
 
+        &__notes {
+            margin-top: 10px;
+            margin-left: 10px;
+        }
+
         &-none {
             margin: 10px 5px;
         }
